do some work with the map, fix bugs in CSS (sidenav z-index), add a loading state when time-consuming async actions (geolocation.navigator.getGeolocation)

--- a/frontend/assets/app.css
+++ b/frontend/assets/app.css
@@ -95,7 +95,7 @@ label {
   width: 285px;
   top: 0;
   height: 100%;
-  z-index: 100;
+  z-index: 99;
 }
 .sidebar-body{
   width: inherit;
@@ -136,6 +136,7 @@ label {
   position: absolute;
   top:0;
   left:0;
+  z-index: 100;
   width: 100%;
   height: 100%;
   background-color: rgba(0,0,0,.5);
@@ -225,10 +226,7 @@ label {
   font-size: 0.5em;
 }
 
-input[type="number"] 
+input[type="number"]
 {
    width:200px;
 }
-
-
-
